<resources>
    <string name="app_name">TachosProject</string>
    <string name="title_activity_tab_registro">TabRegistro</string>
    <string name="tab_text_1">Registro 1</string>
    <string name="tab_text_2">Registro 2</string>
    <string name="tab_text_3">Registro 3</string>
    <string name="tab_text_4">Registro 4</string>
    <string name="tab_text_5">Registro 5</string>
    <string name="tab_text_6">Registro 6</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_disponibilidad">Disponibilidad</string>
    <string name="menu_contabilidad">Contabilidad</string>
    <string name="menu_estadisticas">Estadisticas</string>
    <string name="menu_cuentas">Cuentas</string>
    <string name="menu_notas">Notas</string>
    <string name="menu_cerrarsesion">Cerrar sesion</string>
    <string name="title_activity_resgiter">resgiter</string>
    <string name="title_activity_menu_act_principal">MenuActPrincipal</string>
    <string name="tipo_de_registro">Tipo de registro</string>
    <string name="administracion">Administracion</string>
    <string name="identificador_de_caravana">Identificador de caravana</string>
    <string name="orden_de_llegada">Orden de llegada</string>
    <string name="title_activity_menu_act2">MenuAct2</string>
</resources>
