<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_disponibilidad"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_disponibilidad" />
        <item
            android:id="@+id/nav_contabilidad"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_contabilidad" />
        <item
            android:id="@+id/nav_estadisticas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_estadisticas" />
        <item
            android:id="@+id/nav_perfiles"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_cuentas" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_notas"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_notas" />
            <item
                android:id="@+id/nav_cerrarses"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_cerrarsesion" />
        </menu>
    </item>

</menu>
